:heavy_check_mark: Сборка #6

--- a/6/css/style.css
+++ b/6/css/style.css
@@ -28,12 +28,21 @@ html {
   margin: 0;
 }
 .page__body--center {
-  max-width: 1440px;
+  max-width: 320px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  width: 100%;
+}
+@media (min-width: 768px) {
+  .page__body--center {
+    max-width: 768px;
+  }
+}
+@media (min-width: 1440px) {
+  .page__body--center {
+    max-width: 1440px;
+  }
 }
 .main-container {
   flex-grow: 1;
@@ -1150,7 +1159,7 @@ html {
   content: "";
   position: absolute;
   top: 196px;
-  width: 100%;
+  width: 320px;
   height: 1px;
   background-color: #d9d9d9;
   display: block;
