:heavy_check_mark: Сборка #7

--- a/7/css/style.css
+++ b/7/css/style.css
@@ -2128,6 +2128,9 @@ html {
     width: 169px;
   }
 }
+.card__link img {
+  object-fit: cover;
+}
 @media (min-width: 768px) {
   .card__link img {
     display: block;
